@@ -5,6 +5,7 @@ import mezz.jei.api.constants.VanillaTypes;
 import mezz.jei.api.gui.builder.IRecipeLayoutBuilder;
 import mezz.jei.api.recipe.RecipeIngredientRole;
 import net.minecraft.MethodsReturnNonnullByDefault;
+import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.Ingredient;
 import net.minecraft.world.level.block.Block;
@@ -13,6 +14,7 @@ import org.shsts.tinactory.AllLayouts;
 import org.shsts.tinactory.AllRecipes;
 import org.shsts.tinactory.api.logistics.SlotType;
 import org.shsts.tinactory.content.recipe.ToolRecipe;
+import org.shsts.tinactory.integration.util.ClientUtil;
 
 import java.util.Collections;
 import java.util.List;
@@ -30,11 +32,12 @@ public class ToolCategory extends RecipeCategory<ToolRecipe> {
     }
 
     @Override
-    protected void setRecipe(ToolRecipe recipe, IIngredientBuilder builder) {
+    protected void setRecipe(ResourceLocation loc, ToolRecipe recipe, IIngredientBuilder builder) {
         var shaped = recipe.shapedRecipe;
         var slots = layout.slots;
 
-        builder.itemOutput(slots.get(0).setType(SlotType.ITEM_OUTPUT), shaped.getResultItem());
+        builder.itemOutput(slots.getFirst().setType(SlotType.ITEM_OUTPUT),
+            shaped.getResultItem(ClientUtil.registryAccess()));
         for (var i = 0; i < 3; i++) {
             for (var j = 0; j < 3; j++) {
                 var slot = slots.get(10 + i * 3 + j);
@@ -49,7 +52,7 @@ public class ToolCategory extends RecipeCategory<ToolRecipe> {
     }
 
     @Override
-    protected void extraLayout(ToolRecipe recipe, IRecipeLayoutBuilder builder) {
+    protected void extraLayout(ResourceLocation loc, ToolRecipe recipe, IRecipeLayoutBuilder builder) {
         var k = 0;
         for (var toolIngredient : recipe.toolIngredients) {
             var slot = layout.slots.get(1 + k);
