@@ -3,15 +3,19 @@ package org.shsts.tinactory.compat.jei.gui;
 import javax.annotation.Nullable;
 import javax.annotation.ParametersAreNonnullByDefault;
 import mezz.jei.api.gui.ingredient.IRecipeSlotsView;
+import mezz.jei.api.recipe.RecipeType;
 import mezz.jei.api.recipe.transfer.IRecipeTransferError;
 import mezz.jei.api.recipe.transfer.IRecipeTransferHandler;
 import mezz.jei.api.recipe.transfer.IRecipeTransferHandlerHelper;
 import net.minecraft.MethodsReturnNonnullByDefault;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.inventory.MenuType;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.crafting.RecipeHolder;
 import net.minecraft.world.item.crafting.SmeltingRecipe;
-import net.minecraftforge.fluids.FluidStack;
+import net.neoforged.neoforge.fluids.FluidStack;
+import org.shsts.tinactory.AllMenus;
 import org.shsts.tinactory.api.logistics.PortType;
 import org.shsts.tinactory.content.gui.MEPatternTerminalMenu;
 import org.shsts.tinactory.content.gui.client.MEPatternDraft;
@@ -23,6 +27,7 @@ import org.shsts.tinactory.core.recipe.StackResult;
 import org.shsts.tinactory.integration.logistics.StackHelper;
 import org.shsts.tinactory.integration.recipe.ItemsIngredient;
 import org.shsts.tinactory.integration.util.ClientUtil;
+import org.shsts.tinycorelib.api.registrate.entry.IEntry;
 
 import java.util.Optional;
 import java.util.function.Function;
@@ -36,14 +41,13 @@ import static org.shsts.tinactory.integration.logistics.StackHelper.ITEM_ADAPTER
 public final class MEPatternTransferHandler<R> implements IRecipeTransferHandler<MEPatternTerminalMenu, R> {
     private static final ResourceLocation SMELTING_RECIPE_TYPE = mcLoc("smelting");
 
-    private final Class<R> recipeClass;
+    private final RecipeType<R> recipeType;
     private final Function<R, Optional<MEPatternDraft>> converter;
     private final IRecipeTransferHandlerHelper helper;
 
-    @SuppressWarnings("unchecked")
-    public MEPatternTransferHandler(Class<? extends R> recipeClass, Function<R, Optional<MEPatternDraft>> converter,
+    public MEPatternTransferHandler(RecipeType<R> recipeType, Function<R, Optional<MEPatternDraft>> converter,
         IRecipeTransferHandlerHelper helper) {
-        this.recipeClass = (Class<R>) recipeClass;
+        this.recipeType = recipeType;
         this.converter = converter;
         this.helper = helper;
     }
@@ -54,8 +58,14 @@ public final class MEPatternTransferHandler<R> implements IRecipeTransferHandler
     }
 
     @Override
-    public Class<R> getRecipeClass() {
-        return recipeClass;
+    @SuppressWarnings("unchecked")
+    public Optional<MenuType<MEPatternTerminalMenu>> getMenuType() {
+        return Optional.of((MenuType<MEPatternTerminalMenu>) AllMenus.ME_PATTERN_TERMINAL.get());
+    }
+
+    @Override
+    public RecipeType<R> getRecipeType() {
+        return recipeType;
     }
 
     @Override
@@ -72,10 +82,12 @@ public final class MEPatternTransferHandler<R> implements IRecipeTransferHandler
         return null;
     }
 
-    public static Optional<MEPatternDraft> fromProcessing(ProcessingRecipe recipe, ResourceLocation recipeTypeId) {
+    public static Optional<MEPatternDraft> fromProcessing(IEntry<? extends ProcessingRecipe> entry,
+        ResourceLocation recipeTypeId) {
+        var recipe = entry.get();
         var ret = MEPatternDraft.empty();
         ret.setRecipeTypeId(recipeTypeId);
-        ret.setTargetRecipeId(recipe.loc());
+        ret.setTargetRecipeId(entry.loc());
         var rank = Voltage.fromValue(recipe.voltage).rank;
         if (rank > 0) {
             ret.setVoltageTier(rank);
@@ -96,18 +108,19 @@ public final class MEPatternTransferHandler<R> implements IRecipeTransferHandler
         return ret.outputRows().isEmpty() ? Optional.empty() : Optional.of(ret);
     }
 
-    public static Optional<MEPatternDraft> fromSmelting(SmeltingRecipe recipe) {
+    public static Optional<MEPatternDraft> fromSmelting(RecipeHolder<SmeltingRecipe> entry) {
+        var recipe = entry.value();
         if (recipe.getIngredients().isEmpty()) {
             return Optional.empty();
         }
-        var input = ClientUtil.selectItemFromItems(recipe.getIngredients().get(0));
-        var output = recipe.getResultItem();
+        var input = ClientUtil.selectItemFromItems(recipe.getIngredients().getFirst());
+        var output = recipe.getResultItem(ClientUtil.registryAccess());
         if (input.isEmpty() || output.isEmpty()) {
             return Optional.empty();
         }
         var ret = MEPatternDraft.empty();
         ret.setRecipeTypeId(SMELTING_RECIPE_TYPE);
-        ret.setTargetRecipeId(recipe.getId());
+        ret.setTargetRecipeId(entry.id());
         ret.setVoltageTier(Voltage.ULV.rank);
         var inputRow = MEPatternIngredientDraft.from(ITEM_ADAPTER, StackHelper.copyWithCount(input.get(), 1));
         inputRow.setPort(0);
@@ -120,17 +133,16 @@ public final class MEPatternTransferHandler<R> implements IRecipeTransferHandler
 
     private static Optional<MEPatternIngredientDraft> input(ProcessingRecipe.Input input) {
         var ingredient = input.ingredient();
-        if (ingredient instanceof StackIngredient<?> stackIngredient && stackIngredient.type() == PortType.ITEM) {
-            return Optional.of(MEPatternIngredientDraft.from(ITEM_ADAPTER, (ItemStack) stackIngredient.stack()));
-        } else if (ingredient instanceof StackIngredient<?> stackIngredient &&
-            stackIngredient.type() == PortType.FLUID) {
-            return Optional.of(MEPatternIngredientDraft.from(FLUID_ADAPTER, (FluidStack) stackIngredient.stack()));
-        } else if (ingredient instanceof ItemsIngredient item && item.amount > 0) {
-            return ClientUtil.selectItemFromItems(item.ingredient)
-                .map(stack -> MEPatternIngredientDraft.from(
-                    ITEM_ADAPTER, StackHelper.copyWithCount(stack, item.amount)));
-        }
-        return Optional.empty();
+        return switch (ingredient) {
+            case StackIngredient<?> stackIngredient when stackIngredient.type() == PortType.ITEM ->
+                Optional.of(MEPatternIngredientDraft.from(ITEM_ADAPTER, (ItemStack) stackIngredient.stack()));
+            case StackIngredient<?> stackIngredient when stackIngredient.type() == PortType.FLUID ->
+                Optional.of(MEPatternIngredientDraft.from(FLUID_ADAPTER, (FluidStack) stackIngredient.stack()));
+            case ItemsIngredient item when item.amount > 0 -> ClientUtil.selectItemFromItems(item.ingredient)
+                .map(stack -> MEPatternIngredientDraft.from(ITEM_ADAPTER,
+                    StackHelper.copyWithCount(stack, item.amount)));
+            default -> Optional.empty();
+        };
     }
 
     private static Optional<MEPatternIngredientDraft> output(ProcessingRecipe.Output output) {
