@@ -2,30 +2,20 @@ package org.shsts.tinactory.core.recipe;
 
 import javax.annotation.ParametersAreNonnullByDefault;
 import net.minecraft.MethodsReturnNonnullByDefault;
-import net.minecraft.resources.ResourceLocation;
 import org.shsts.tinactory.api.recipe.IProcessingObject;
-import org.shsts.tinycorelib.api.registrate.entry.IRecipeType;
 
+import java.util.List;
 import java.util.Optional;
 
 @ParametersAreNonnullByDefault
 @MethodsReturnNonnullByDefault
 public class DisplayInputRecipe extends ProcessingRecipe {
-    protected DisplayInputRecipe(BuilderBase<?, ?> builder) {
-        super(builder);
-    }
-
-    public static Builder builder(IRecipeType<Builder> parent, ResourceLocation loc) {
-        return new Builder(parent, loc) {
-            @Override
-            protected ProcessingRecipe createObject() {
-                return new DisplayInputRecipe(this);
-            }
-        };
+    public DisplayInputRecipe(List<Input> inputs, List<Output> outputs, long workTicks, long voltage, long power) {
+        super(inputs, outputs, workTicks, voltage, power);
     }
 
     @Override
     protected Optional<IProcessingObject> getDisplayObject() {
-        return inputs.isEmpty() ? Optional.empty() : Optional.of(inputs.get(0).ingredient());
+        return inputs.isEmpty() ? Optional.empty() : Optional.of(inputs.getFirst().ingredient());
     }
 }
